
------------------------------------
Mishandled or unimplemented features
------------------------------------

- Reverse requirement of page variable for rendering
  of locator on statutory types, introduced at
  1.0.327.

- Fix bug in relatively new code in disambiguation machinery,
  triggered by an attempt to access a name form parameter
  that has not been set in that case.

==========================
Changes in version 1.0.328
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Apply leading embedded locator label to
  item label if section is not present.

- Remove redundant text escapes (bug unmasked
  by 1.0.324).


==========================
Changes in version 1.0.327
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Remove requirement of title variable for
  generation of internal legislation_id value
  on statutory items, and use either original-date
  or issued in the value, but not both.

- Allow locator on statutory types if page variable
  is non-nil.


==========================
Changes in version 1.0.326
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Fix backreferencing with reset of note numbers.


==========================
Changes in version 1.0.325
==========================

------------------------------------
Mishandled or unimplemented features
------------------------------------

- Avoid disambiguation for statutory types
  (bill, gazette, legislation).

- Make numeric evaluation of number variable
  rendered via cs:number not depend on whether
  page-range-format has been set.

- Introduce is-parallel condition. Condition is
  robust; suppressing an element on which detection
  of the parallel depends will not break detection.
